--- a/documentation/final/infrastructure.tex
+++ b/documentation/final/infrastructure.tex
@@ -9,9 +9,9 @@ In this game, four discrete actions are available to the playing agent at any ti
 
 \begin{enumerate}[label=(\alph*)]
 \item  Do nothing 
-\item (b)Fire left orientation engine (rotates the lunar lander clockwise)
-\item (c) Fire main engine (provides upward thrust) 
-\item  Fire right orientation engine (rotates the lunar lander anti-clockwise) 
+\item  Fire left orientation engine (rotates the lunar lander clockwise)
+\item Fire main engine (provides upward thrust) 
+\item Fire right orientation engine (rotates the lunar lander anti-clockwise) 
 \end{enumerate}
 
 The agent can choose only one action among the given actions at a given time frame.
