--- a/documentation/final/biblio.bib
+++ b/documentation/final/biblio.bib
@@ -1,17 +1,22 @@
-@article{openai,
-title={https://gym.openai.com/envs/LunarLander-v2/}
-}
 
-@article{leaderboard,
-title={https://github.com/openai/gym/wiki/Leaderboard\#lunarlander-v2}
-}
 
-@article{allanreyes,
-title={https://allan.reyes.sh/projects/gt-rl-lunar-lander/}
-}
 
-@article{Dueling_Diagram,
-title={https://drive.google.com/file/d/0BxXI_RttTZAhVUhpbDhiSUFFNjg/view}
+@article{journals/nature/MnihKSRVBGRFOPB15,
+  added-at = {2018-11-14T00:00:00.000+0100},
+  author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A. and Veness, Joel and Bellemare, Marc G. and Graves, Alex and Riedmiller, Martin A. and Fidjeland, Andreas and Ostrovski, Georg and Petersen, Stig and Beattie, Charles and Sadik, Amir and Antonoglou, Ioannis and King, Helen and Kumaran, Dharshan and Wierstra, Daan and Legg, Shane and Hassabis, Demis},
+  biburl = {https://www.bibsonomy.org/bibtex/27c6f54424f0d4672eae5411091b5bd95/dblp},
+  ee = {https://www.wikidata.org/entity/Q27907579},
+  interhash = {eac59980357d99db87b341b61ef6645f},
+  intrahash = {7c6f54424f0d4672eae5411091b5bd95},
+  journal = {Nature},
+  keywords = {dblp},
+  number = 7540,
+  pages = {529-533},
+  timestamp = {2018-11-15T15:25:02.000+0100},
+  title = {Human-level control through deep reinforcement learning.},
+  url = {http://dblp.uni-trier.de/db/journals/nature/nature518.html#MnihKSRVBGRFOPB15},
+  volume = 518,
+  year = 2015
 }
 
 
@@ -84,4 +89,21 @@ title={https://drive.google.com/file/d/0BxXI_RttTZAhVUhpbDhiSUFFNjg/view}
   timestamp = {Mon, 13 Aug 2018 16:46:11 +0200},
   biburl    = {https://dblp.org/rec/bib/journals/corr/LillicrapHPHETS15},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{openai,
+title={https://gym.openai.com/envs/LunarLander-v2}
+}
+
+@article{leaderboard,
+title={https://github.com/openai/gym/wiki/Leaderboard\#lunarlander-v2}
+}
+
+@article{allanreyes,
+title={https://allan.reyes.sh/projects/gt-rl-lunar-lander}
+}
+
+@article{Dueling_Diagram,
+title={https://arxiv.org/abs/1511.06581\} 
+author    = {DeepMind}
 }
