--- a/documentation/final/experiments.tex
+++ b/documentation/final/experiments.tex
@@ -109,11 +109,9 @@ Also, we observe the variation is more in DQN and Double DQN as compared to Duel
 
 \subsection{ Comparision of DQN Variants}
 
-Figure 6 shows comparison of different learning algorithms. The learning performance of baselines are also depicted in the same figure. From the figure, we can see that Dueling Network Architecture reaches the average reward 200 earlier than DQN and Double DQN, near episode number 450. \\
+Figure 6 shows comparison of different learning algorithms. The learning performance of baselines are also depicted in the same figure. From the figure, we can see that Dueling Network Architecture reaches the average reward 200 earlier than DQN and Double DQN, near episode number 450. After reaching the reward 200, the graph is getting closer to zero slope. This is also intuitive since after reward 200, the average reward doesn’t change much. \\
 
-After reaching the reward 200, the graph is getting closer to zero slope. This is also intuitive since after reward 200, the average reward doesn’t change much. \\
-
-Another thing evident from this is that the average reward for the random baseline fixes to a negative value after 600 episodes and there’s no much variation on average reward (although the reward for each episode varies significantly). \\
+Another thing evident from this is that the average reward for the random baseline fixes to a negative value after 600 episodes and there’s no much variation on average reward (although the reward for each episode varies significantly). 
  
 \begin{figure}[!ht]
 %\begin{figure}%
